# agent_exp

./: .gitignore  batch_inf.py  inf.py  prompt_builder.py  pyproject.toml
inference/: batch_inf.py  count_tab.py  inf.sh  inf_one.py  prompt_builder.py  pyproject.toml  run_models.sh  show_data.py
inference/results/: preds_gsm8k_test.jsonl  preds_gsm8k_test_llm_jp__llm_jp_3_1.8b_instruct.jsonl  preds_gsm8k_train.jsonl  preds_mgsm_data_Qwen__Qwen3_1.7B.jsonl  preds_mgsm_data_llm_jp__llm_jp_3_13b_instruct.jsonl  preds_mgsm_data_llm_jp__llm_jp_3_3.7b_instruct.jsonl
rag/: collect_rag_arxiv_ids.py  collect_topcited_arxiv_original.py  config.py  pyproject.toml  rag_papers.json
rag/bm25_search/: build_bm25.py  chunk_arxiv.py  inspect_corpus.py  search_bm25.py
rag/make_corpus_scripts/: build_corpus.py  collect_topcited_arxiv.py  sample_volume.py
rag/make_corpus_scripts/paper_urls/: resnet_topcited.json  transformer_topicted.json
rag/paper_urls/: nerf_papers_topcited.json
results/: preds_gsm8k_test_llm_jp__llm_jp_3_13b_instruct.jsonl  preds_gsm8k_test_llm_jp__llm_jp_3_3.7b_instruct.jsonl
train/: pyproject.toml  run_train.sh  train_lora_sft.py
translate/: pyproject.toml  translate_gsm8k_en_to_ja_jsonl.py
