[project]
name = "agent-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "huggingface-hub>=0.34.4",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "torch>=2.8.0",
    "transformers>=4.55.4",
]
